Actual Fix for selecting text on mobile when clicking buttons

--- a/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketColours/RadialBracketColours.scss
+++ b/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketColours/RadialBracketColours.scss
@@ -38,9 +38,9 @@
       transform: translateY(-1px);
       box-shadow: 0 .5rem 1rem rgba(0,0,0,0.2);
     }
+  }
 
-    & > * {
-      user-select: none;
-    }
+  &__text {
+    user-select: none;
   }
 }
