--- a/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketFonts/RadialBracketFonts.scss
+++ b/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketFonts/RadialBracketFonts.scss
@@ -10,11 +10,12 @@
   &__section {
     font-size: $font-size-tertiary;
     text-align: center;
-    & > * {
-      user-select: none;
-    }
   }
   
+  &__text {
+    user-select: none;
+  }
+
   &__options {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
